# TurtleCPP

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  gen_shaders.sh  mac.md  test.bat  test.sh  test_clang.sh
.github/workflows/: build.yml
cmake/: gen_shaders.cmake
include/: color.hpp  renderer.hpp  turtle.hpp  turtle_api.hpp
include/turtle/: color.hpp  turtle.hpp
scripts/: generate_color_map.py  generate_icon.py  generate_shaders.py
shaders/: shader.geom  shader.vert
src/: color.cpp  renderer.cpp  shaders.cpp  shaders.hpp  turtle.cpp  turtle_impl.hpp  window.cpp  window.hpp
src/glad/: glad.c
src/renderer/: rendererGL.cpp  rendererOGL.cpp  rendererSDL.cpp
src/renderer/glad/: glad.c  glad.h
src/renderer/shaders/: shader.frag  shader.geom  shader.vert  shaders.h  shaders.hpp
src/shaders/: shader.frag  shader.vert
test/: example.cpp  round_caps.cpp  srpienski_triangle.cpp  test.bat  test.cpp  test2.cpp  test3.cpp  thickness.cpp
